--- a/index.css
+++ b/index.css
@@ -1,3 +1,19 @@
+div {
+  width: 320px;
+  padding: 10px;
+  border: 1px solid gray;
+  margin: 0;
+  background-color:#4aaaa5;
+  text-align: center;
+  vertical-align: middle;
+  position: relative;
+}
+
+h1 {
+  color:white;
+}
+
+
 body {
     background-image: url("assets/images/interlaced.png");
   }
@@ -5,6 +21,19 @@ body {
 img {
     float:left;
     margin:15px;
+    position:relative;
+    bottom:25px;
+}
+
+hr {
+  margin-left:auto;
+  margin-right:auto;
+  height:.5px;
+  color:gray;
+  background-color: gray;
+  opacity:.8;
+  width:97%;
+
 }
 
 .content1 {
@@ -19,8 +48,18 @@ border-radius: 1px;
 overflow:auto;
 }
 
-h2 {
+h1 h2 {
     color:#4aaaa5;
+    padding-left:80px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+}
+
+h4 {
+  font-family: 'Georgia', Times, Times New Roman, serif;
+}
+  
+p {
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 .footer {
@@ -33,3 +72,22 @@ h2 {
     text-align: center;
     border-top: 8px solid #4aaaa5;
  }
+
+ ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li {
+  float: right;
+  position:relative;
+  top:10px;
+}
+
+li a {
+  display: block;
+  padding: 8px;
+  background-color: #dddddd;
+}
