added title div class

--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-div {
+.title {
   width: 320px;
   padding: 10px;
   border: 1px solid gray;
@@ -6,7 +6,7 @@ div {
   background-color:#4aaaa5;
   text-align: center;
   vertical-align: middle;
-  position: relative;
+  position: absolute;
 }
 
 h1 {
@@ -46,6 +46,8 @@ padding: 10px;
 border-radius: 1px;
   box-shadow: 0px 0px 0px 3px rgba(0,0,0,0.3);  
 overflow:auto;
+position: relative;
+top:90px;
 }
 
 h1 h2 {
@@ -84,10 +86,11 @@ li {
   float: right;
   position:relative;
   top:10px;
+ 
 }
 
 li a {
   display: block;
   padding: 8px;
-  background-color: #dddddd;
+  background-color: white;
 }
