--- a/index.css
+++ b/index.css
@@ -72,18 +72,18 @@ hr {
 }
 
 .About-Me {
-  font-size:32px ;
+  font-size:24px ;
   color:#4aaaa5;
   padding-left:80px;
   font-family: 'Georgia', Times, Times New Roman, serif;
   padding: 20px;
   position:relative;
-  left:40px;
+  left:48px;
 }
 
 .content1 {
 width:960px;
-border: 1px solid gray;
+border: 1px #dddddd;
 align:center;
 margin: auto;
 background: white;
@@ -105,34 +105,45 @@ h1 h2 {
     font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
+
+
+
+p {
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+
 h4 {
   font-family: 'Georgia', Times, Times New Roman, serif;
   color: gray;
   opacity: .5;
 }
 
-.Links {
-.link { color: #FF0000; } /* CSS link color (red) */
-.link:hover { color: #00FF00; } /* CSS link hover (green) */
+.links {
+  padding: 10px;
+  margin: 5px;
+  position:relative;
+  border-width: 1px;
+  border-color: black;
+  top:130px;
+  font-size: 15px;
+  font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
-p {
-  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-}
 
 /* unvisited link */
 a:link {
-  color: red;
+  color:#777777;
 }
 
 /* visited link */
 a:visited {
-  color: green;
+  color: #777777;
 }
 
 /* mouse over link */
 a:hover {
-  color: hotpink;
+  color: blueviolet;
 }
 
 /* selected link */
