--- a/index.css
+++ b/index.css
@@ -5,7 +5,9 @@
   background-color: white;
   margin-top: -25px;
   border-color:#777777;
-  border: 1px;
+  border-width: 1px;
+  border-style: solid;
+  /* border: 1px double #32a1ce; */
 }
 
 
@@ -20,8 +22,20 @@
   vertical-align: middle;
   position: absolute;
   left: 277px;
-  top: 75px;
+  top: 55px;
 }
+
+.links {
+  padding: 10px;
+  margin: 5px;
+  position:relative;
+  border-width: 1px;
+  border-color: black;
+  top:115px;
+  font-size: 12px;
+  font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
 
 ul {
   list-style-type: none;
@@ -94,7 +108,7 @@ border-radius: 1px;
 border-color:gray;
 overflow:auto;
 position: relative;
-top:150px;
+top:40px;
 overflow:hidden;
 }
 
@@ -121,16 +135,6 @@ h4 {
   opacity: .5;
 }
 
-.links {
-  padding: 10px;
-  margin: 5px;
-  position:relative;
-  border-width: 1px;
-  border-color: black;
-  top:130px;
-  font-size: 12px;
-  font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-}
 
 
 /* unvisited link */
