--- a/contact.css
+++ b/contact.css
@@ -31,7 +31,7 @@
   position:relative;
   border-width: 1px;
   border-color: black;
-  top:115px;
+  top:110px;
   font-size: 12px;
   font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
@@ -139,7 +139,7 @@
   * {box-sizing: border-box;}
 
 input[type=text], select, textarea {
-  width: 100%;
+  width: 90%;
   padding: 12px;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -189,6 +189,13 @@ input[type=submit]:hover {
     color: blue;
   }
   
+  .form-1 {
+    margin: auto;
+    padding:10px;
+    position:relative;
+    left: 50px;
+    bottom: 20px;
+  }
   
   .footer {
       position: fixed;
